--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@
 
 plugins {
     // Apply the java-library plugin to add support for Java Library
+    id "com.google.protobuf" version "0.8.8"
     id 'java-library'
 }
 
@@ -15,15 +16,27 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
-
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:27.0.1-jre'
-
-    // Use JUnit test framework
+    compile 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
+    compile 'com.google.protobuf:protobuf-java:3.0.0'
     testImplementation 'junit:junit:4.12'
+
+    protobuf files("ext/")
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs 'build/generated/source/proto/main/java'    // Include generated gRPC protobuf classes
+        }
+    }
+}
+
+protobuf {
+    protoc {
+        artifact = 'com.google.protobuf:protoc:3.0.0'
+    }
 }
